--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^9.1.2",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/core": "^9.1.2",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-express": "^9.1.2",
+    "@nestjs/swagger": "^6.1.2",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
